# My-Purple

./: .env.example  .gitignore  README.md  RUN_TONIGHT.txt  doctor.py  pyproject.toml  requirements.txt  setup.ps1
.claude/: AGENTS.md  CLAUDE.md  COMMANDS.md  RULES.md  SKILLS.md  log.md
.claude/agents/: bnac-agent-creator.md  bnac-bundle-creator.md  bnac-changelog-agent.md  bnac-command-creator.md  bnac-context-compactor.md  bnac-cross-llm-reviewer.md  bnac-developer.md  bnac-go-nogo-approver.md  bnac-kpi-tracker.md  bnac-memory-curator.md  bnac-milestone-planner.md  bnac-milestone-tracker.md  bnac-phase-planner.md  bnac-pipeline-state-tracker.md  bnac-planner.md  bnac-quality-gate.md  bnac-reviewer.md  bnac-skill-creator.md  bnac-status-update-agent.md  bnac-task-planner.md  python-code-verifier.md  python-compliance-checker.md  python-developer.md  python-doc-writer.md  python-migrator.md  python-pr-approver.md  python-security-checker.md  python-unit-test-developer.md
.claude/bnac/: install-state.json  telemetry.jsonl
.claude/commands/: bnac-agent-create.md  bnac-build-fix.md  bnac-bundle-create.md  bnac-changelog.md  bnac-code-review.md  bnac-command-create.md  bnac-context.md  bnac-cross-llm-review.md  bnac-feature-dev.md  bnac-go-nogo.md  bnac-init.md  bnac-kpi.md  bnac-memory.md  bnac-milestone-plan.md  bnac-milestone.md  bnac-phase-plan.md  bnac-phase.md  bnac-pipeline-run-all.md  bnac-pipeline-stage.md  bnac-plan.md  bnac-python-compliance-check.md  bnac-python-doc-write.md  bnac-python-feature-dev.md  bnac-python-migrate.md  bnac-python-pr-approve.md  bnac-python-security-check.md  bnac-python-test.md  bnac-python-verify.md  bnac-quality-gate.md  bnac-skill-create.md  bnac-status-update.md  bnac-task-plan.md  bnac-undo.md  bnac-update-docs.md
.claude/hooks/: ds-compliance-hook.md  separation-pattern-hook.md
.claude/rules/: activity-logging.md  coding-standards.md  context-first.md  git-workflow.md  memory-management.md
.claude/templates/: MEMORY.md  SUMMARY.md  carry-forward.md  log.md  milestone-status.md  project-CLAUDE.md
docs/: ALWAYS_ON.md  EMAIL_CALENDAR.md  FIRSTRUN.md  JARVIS_ROADMAP.md  OBSERVABILITY.md  wake_word.md
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/ui-src/: App.css  App.tsx  main.tsx  purple.ts  theme.ts
scripts/: build_tauri.ps1  install_service.ps1  train_wake.py  uninstall_service.ps1
src/purple/: __init__.py  app.py  audio.py  briefing.py  cli.py  config.py  config_api.py  documents.py  events.py  focus.py  gpu.py  greeting.py  jobs.py  observability.py  observe.py  run.py  runtime.py  safety.py  scheduler.py  selfcheck.py  selfstate.py  service.py  smarthome.py  speaker.py  suggestions.py  usage.py
tests/: conftest.py
tests/unit/: test_always_on.py  test_automations_tool.py  test_briefing.py  test_browser.py  test_config_api.py  test_desktop_ui.py  test_documents.py  test_email_calendar.py  test_files.py  test_memory_extract.py  test_missions.py  test_observability.py  test_observe_greeting.py  test_persona.py  test_phone.py  test_phone_watchers.py  test_productivity.py  test_rules.py  test_safety.py  (+11 more)
(+154 files in other folders)
